# justsersics

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: issue_template.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
justsersics/: __init__.py  cli.py  convert.py  justsersics.py  log.py  masking.py  psf.py  utils.py
justsersics/tests/: test_justsersics.py
tests/: __init__.py  test_justsersics.py
