[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:justsersics/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[options]
zip_safe = False
packages = find:
install_requires =
    numpy==1.18.4
    astropy>=4.0
    scipy>=1
    scikit-image
    photutils>=0.7
    sep>=1
python_requires = >=3.6

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

